Fix pixel gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,7 +173,6 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
   height: 46vh;
   background: #d9d9d9;
   border: 1px solid #000000;
